--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Showcase your app beautifully.</h1>
-                            <p class="lead fw-normal text-muted mb-5">Launch your mobile app landing page faster with this free, open source theme from Start Bootstrap!</p>
+                            <h1 class="display-1 lh-1 mb-3">FScan APP(iOS) - 快速扫码专家</h1>
+                            <p class="lead fw-normal text-muted mb-5">FScan APP(iOS) 是一个快速扫码专家，支持扫描二维码、条形码、PDF417等格式的条码。</p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
                                 <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
@@ -91,7 +91,7 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="h2 fs-1 text-white mb-4">"An intuitive solution to a common problem that we all face, wrapped up in a single app!"</div>
+                        <div class="h2 fs-1 text-white mb-4">"专业高效精准的条码识别APP，完美适配各类条码，支持批量快速扫描和数据导出，简洁易用的界面，快速上手，降低学习成本 "</div>
                         <img src="assets/img/tnw-logo.svg" alt="..." style="height: 3rem" />
                     </div>
                 </div>
@@ -108,16 +108,16 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Device Mockups</h3>
-                                        <p class="text-muted mb-0">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                        <h3 class="font-alt">批量处理</h3>
+                                        <p class="text-muted mb-0">毫秒级识别，连续快速解码，智能防重复，适合大量条码快速录入!</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Flexible Use</h3>
-                                        <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
+                                        <h3 class="font-alt">相册导入识别</h3>
+                                        <p class="text-muted mb-0">支持识别照片图中条码，无需手动输入，方便快捷！</p>
                                     </div>
                                 </div>
                             </div>
@@ -126,16 +126,16 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Free to Use</h3>
-                                        <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
+                                        <h3 class="font-alt">智能防重</h3>
+                                        <p class="text-muted mb-0">重复扫描条码时，自动过滤重复项，避免重复录入！</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Open Source</h3>
-                                        <p class="text-muted mb-0">Since this theme is MIT licensed, you can use it commercially!</p>
+                                        <h3 class="font-alt">灵活导出</h3>
+                                        <p class="text-muted mb-0">支持导出为Excel、PDF、TXT等格式，方便数据处理和分析！</p>
                                     </div>
                                 </div>
                             </div>
@@ -177,8 +177,14 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
-                        <h2 class="display-4 lh-1 mb-4">Enter a new age of web design</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                        <h2 class="display-4 lh-1 mb-4">实用特性</h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">批量处理 — 支持快速批量扫码录入<br>
+声音/振动提示 — 即时反馈扫描结果<br>
+保存扫描原图 — 便于后期核对与存档<br>
+拍照记录 — 无法识别的模糊/破损条码，可拍照留存并手动补录<br>
+远距变焦 —  手势调节放大/缩小，轻松扫描远距离二维码！<br>
+点击对焦 —  快速锁定清晰度，模糊码也能秒识别<br>
+</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="https://source.unsplash.com/u8Jn2rzYIps/900x900" alt="..." /></div>
@@ -191,11 +197,11 @@
             <div class="cta-content">
                 <div class="container px-5">
                     <h2 class="text-white display-1 lh-1 mb-4">
-                        Stop waiting.
+                        还在等待什么.
                         <br />
-                        Start building.
+                        赶紧下载体验吧！
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Download for free</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://apps.apple.com/us/app/fscan-fast-continuous-scanning/id1166424152" target="_blank">免费下载</a>
                 </div>
             </div>
         </section>
@@ -213,7 +219,7 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; Your Website 2023. All Rights Reserved.</div>
+                    <div class="mb-2">&copy; FScan 2025. All Rights Reserved.</div>
                     <a href="#!">Privacy</a>
                     <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a>
